--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -8,7 +8,8 @@ html, body { height: 100%; }
 body { 
     margin: 0; 
     font-family: Roboto, "Helvetica Neue", sans-serif; 
-    background-color: rgb(240, 240, 240);
+    background-color: rgb(17, 17, 17);
+    color: white;
 }
 
 .container {
